@@ -146,6 +146,10 @@ public class TableMetrics
     public final LatencyMetrics casCommit;
     /** percent of the data that is repaired */
     public final Gauge<Double> percentRepaired;
+    /** Number of started repairs as coordinator on this table */
+    public final Counter repairsStarted;
+    /** Number of completed repairs as coordinator on this table */
+    public final Counter repairsCompleted;
 
     public final Timer coordinatorReadLatency;
     public final Timer coordinatorScanLatency;
@@ -694,6 +698,9 @@ public class TableMetrics
         casPrepare = new LatencyMetrics(factory, "CasPrepare", cfs.keyspace.metric.casPrepare);
         casPropose = new LatencyMetrics(factory, "CasPropose", cfs.keyspace.metric.casPropose);
         casCommit = new LatencyMetrics(factory, "CasCommit", cfs.keyspace.metric.casCommit);
+
+        repairsStarted = createTableCounter("RepairsStarted");
+        repairsCompleted = createTableCounter("RepairsCompleted");
     }
 
     public void updateSSTableIterated(int count)
